x.y.z
=====

Release date:

New features:

Bug fixes:

Other:

0.6.0
=====

Release date:

Thu, 10 Apr 2025 21:05:49 +0300

New features:

* Jump to the start of the current pattern on Home key pressed

* Scroll by linesPerBeat on Page Up / Page Down pressed

* Implement note delay
  - Context menu => Line => Set delay

* Improve video generation functionality
  - Zoom animation for the background image
  - Fade out for the logo
  - Show note names
  - Flash effect

Bug fixes:

* Fix MIDI CC settings

* Fix pattern copy when pattern has a deleted track

* Fix excessive changed positions when operating on a shortened pattern

* Fix pattern creation when a track has been deleted

* Fix track wrapping when moving cursor left

* Fix line wrapping when scrolling to a negative line

* Fix C++ <-> QML interface on Qt 6.4
  - The main problem is that some standard types like size_t not
    fully supported before Qt 6.5 and this breaks the UI

Other:

* Separately send initial MIDI CC settings

* CPack: Add qml6-module-qtquick-window as a dependency

0.5.0
=====

Release date:

Fri, 21 Mar 2025 21:04:32 +0200

New features:

* Make it possible to loop patterns

* Implement velocity interpolation on a column

* Add option to transpose by +/-6 semitones

Bug fixes:

* Fix double triggering of notes when editing

* Fix 'Send MIDI clock' not saved if OFF

* Fix current line count not updating on playback

* Save created date only once

* Update also column's mixer state when updating column headers

* Link Argengine and SimpleLogger statically

* Don't force the height of the main context menu

0.4.0
=====

Release date:

Wed, 12 Mar 2025 22:55:47 +0200

New features:

* Music video generator (**Experimental**)
  - Generates note visualization with particle effects

* Implement Save as template

* Show status messages about MIDI devices

* Support negative instrument delays

Bug fixes:

* Fix MIDI device not playing after re-detected

* Properly destroy removed columns
