@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Implement on-the-fly transposition via instrument settings
+
 Bug fixes:
 
 Other:
